--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1 
-    img(src='images/icon.svg' height='64px' align='absmiddle')
-    span &nbsp;Node.js &ndash; Demo Web App
+    img(src='images/icon.svg')
+    span Node.js - Demo Web App
   h2 &#x1F4BB; System Info...
   table 
     tr 
