--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
       td #{info.cpus.length} &times; #{info.cpus[0].model}
     tr
       td Memory: 
-      td #{Math.round(info.mem/(1024*1024))} Mb
+      td #{Math.round(info.mem/(1024*1024))} MB
     tr
       td Website Name: 
       td #{info.env}
