--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   h1 
     img(src='images/icon.svg')
     span Node.js - Demo Web App
-  h2 &#x1F4BB; System Info...
+  h2 &#x1F4BB; System Summary ... 
   table 
     tr 
       td OS: 
