--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,37 +1,3 @@
 body {
-  padding: 20px;
-  font: 18px "Segoe UI Light", "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: lightgray;
-  background-color: #333333;
-}
-
-a {
-  color: white;
-}
-
-h1 {
-  background-color: #0072C6;
-  padding: 20px;
-  color: white;
-  border-radius: 10px;
-}
-
-h1 img {
-  height: 64px;
-  padding-right: 20px;
-  vertical-align: middle;
-}
-
-table {
-  background-color: #B8D432;
-  color: #000000;
-  padding: 10px;
-  font-weight: bolder;
-  border-radius: 6px;
-}
-
-.foot {
-  font-size: 80%;
-  float: right;
-  top: -30px
+  padding-top: 70px;
 }
