--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 body {
   padding-top: 70px;
 }
-
 .navbar, .navbar-brand  {
   font-size: 1.3em;
 }
@@ -10,4 +9,22 @@ body {
 }
 h2 {
   font-size: 3.5em;
+}
+.footnote {
+  font-size: 90%;
+  float: right;
+  top: -30px;
+  padding-right:20px;
+}
+table i {
+  font-size: 2em !important;
+}
+table td {
+  padding-bottom: 10px !important;
+  padding-top: 10px !important;
+}
+.index-head {
+  margin-top:-20px; 
+  border-radius:15px; 
+  padding:15px
 }
