--- a/views/info.ejs
+++ b/views/info.ejs
@@ -28,7 +28,7 @@
       <tr> <td><i class="fa fa-gears"></i></td><td>  OS Version</td> <td><%= info.release %></td> </tr>
       <tr> <td><i class="fa fa-wrench"></i></td><td>  Architecture</td> <td><%= info.arch %></td> </tr>
       <tr> <td><i class="fa fa-microchip"></i></td><td>  Processors</td> <td><%= info.cpus.length%> &times; <%=info.cpus[0].model %></td> </tr>
-      <tr> <td><i class="fa fa-cog"></i></td><td>  Memory</td> <td><%= info.mem %>GB</td> </tr>
+      <tr> <td><i class="fa fa-cog"></i></td><td>  Memory</td> <td><%= info.mem %> MB</td> </tr>
       <tr> <td><i class="fa fa-codepen"></i></td><td>  Node Version</td> <td><%= info.nodever %></td> </tr>
     </table>
 
