--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -34,7 +34,8 @@
     
         <div class="navbar-collapse collapse">
             
-          <a class="btn btn-success navbar-btn" href='/info'><i class="fa fa-info-circle"></i>&nbsp; SYS INFO</a>
+          <a class="btn btn-success navbar-btn" href='/info'><i class="fa fa-info-circle"></i>&nbsp; SYSTEM</a>
+          <a class="btn btn-success navbar-btn" href='/weather'><i class="fa fa-cloud"></i>&nbsp; WEATHER</a>          
         </div>
       </div>
     </nav>
