Renaming icons etc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <br/>
 <div class="jumbotron">
-    <h2 class="bg-primary index-head"><img src='/images/icon.svg' height='90px'/> Node.js Demo App</h2>
+    <h2 class="bg-primary index-head"><img src='/images/node-logo-1.svg' height='90px'/> Node.js Demo App</h2>
     <hr/>
     <p>
         This is a simple Node.js Express web application designed for running in Azure &amp; containers for demos.<br/><br/>
