--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -12,7 +12,6 @@
           }({
               instrumentationKey:"<%=process.env.APPINSIGHTS_INSTRUMENTATIONKEY%>"
           });
-            
           window.appInsights=appInsights;
           appInsights.trackPageView();
       </script> 
@@ -29,11 +28,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><i class="fa fa-codepen"></i>&nbsp; Node.js Demo</a>
+          <a class="navbar-brand" href="/"><img class="navbar-left" src="images/node-logo-2.png" height="50px" style="margin-top:-10px"> &nbsp; Node.js Demo</a>
         </div>
     
         <div class="navbar-collapse collapse">
-            
           <a class="btn btn-success navbar-btn" href='/info'><i class="fa fa-info-circle"></i>&nbsp; SYSTEM</a>
           <a class="btn btn-success navbar-btn" href='/weather'><i class="fa fa-cloud"></i>&nbsp; WEATHER</a>          
         </div>
@@ -44,4 +42,3 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
     <div class="container body-content">
-      
