--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,9 @@
 body {
   padding-top: 70px;
+  /*background-color: green;*/
+}
+.jumbotron {
+  background-color: rgba(9, 27, 58, 0.38)
 }
 .navbar, .navbar-brand  {
   font-size: 1.3em;
