--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -34,6 +34,7 @@
         <div class="navbar-collapse collapse">
           <a class="btn btn-success navbar-btn" href='/info'><i class="fa fa-info-circle"></i>&nbsp; SYSTEM</a>
           <a class="btn btn-success navbar-btn" href='/weather'><i class="fa fa-cloud"></i>&nbsp; WEATHER</a>          
+          <a class="btn btn-success navbar-btn" href='/load'><i class="fa fa-fire"></i>&nbsp; CPU LOAD</a>          
         </div>
       </div>
     </nav>
