Cleaned up images/icons

--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="shortcut icon" type="image/png" href="images/node-icon.png" />
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -28,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img class="navbar-left" src="images/node-logo-2.png" height="50px" style="margin-top:-10px"> &nbsp; Node.js Demo</a>
+          <a class="navbar-brand" href="/"><img class="navbar-left" src="images/node-icon.png" height="50px" style="margin-top:-10px"> &nbsp; Node.js Demo</a>
         </div>
     
         <div class="navbar-collapse collapse">
