Updated packages & dockerfile

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -16,7 +16,7 @@
         <td>Not running as a Docker container &#x1F622; </td>
       <% } %>        
       </tr>
-      <tr> <td><i class="fa fa-lightbulb-o"></i></td><td>  App Insights</td>
+      <tr> <td>&nbsp;<i class="fa fa-lightbulb-o"></i></td><td>  App Insights</td>
         <%if (process.env.APPINSIGHTS_INSTRUMENTATIONKEY) { %>
            <td>Reporting data to App Insights, nice job! </td>
         <% } else { %>
