--- a/views/info.ejs
+++ b/views/info.ejs
@@ -11,7 +11,7 @@
     <table class="table table-striped" style='font-size:1.4em'>
       <tr> <td><i class="fa fa-cube"></i></td><td>  Containerized</td>
       <%if (isDocker) { %>
-         <td>Running in a Docker container! &#x1F604; </td>
+         <td>Looks like we're running in a Docker container! &#x1F604; </td>
       <% } else { %>
         <td>Not running as a Docker container &#x1F622; </td>
       <% } %>        
