--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <a target='_new' href='https://docs.microsoft.com/en-us/nodejs/azure/?view=azure-node-2.0.0' class="btn btn-primary btn-lg">Get started with Azure &amp; Node.js</a>
     </p>
     <br/>
-    <p>Microsoft <i class="fa fa-heart"></i> Open Source!</p>
+    <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
 </div>
 
 <%- include('_foot.ejs') %>
