--- a/views/_foot.ejs
+++ b/views/_foot.ejs
@@ -1,5 +1,5 @@
 
 </div>
-<div class="footnote">[v<%= ver %>] Ben Coleman, 2017</div>
+<div class="footnote">[v<%= ver %>, <%= rel %>] Ben Coleman, 2017</div>
 </body>
 </html>
