Added user login heaers detection code

--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -37,6 +37,9 @@
           <a class="btn btn-success navbar-btn" href='/weather'><i class="fa fa-cloud"></i>&nbsp; WEATHER</a>          
           <a class="btn btn-success navbar-btn" href='/load'><i class="fa fa-fire"></i>&nbsp; CPU LOAD</a>          
         </div>
+        <div class="nav navbar-nav navbar-right">
+          <%if (user) { %><span class="btn btn-disabled navbar-btn"><i class="fa fa-user-circle" style="font-size:150%"></i>&nbsp; <%= user %></span><% } %>
+        </div> 
       </div>
     </nav>
     
