--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,3 +45,19 @@ table td {
 .todo input[type=checkbox] {
   transform: scale(2.5);
 }
+.todo-foo {
+  text-decoration: line-through;
+  color: #777777;
+}
+.todo-check {
+  cursor: pointer;
+}
+.todo-title:focus {
+  background-color: #eeeeee;
+  color: #333333;
+  padding: 5px;
+  border-radius: 8px;
+  border: 3px solid #0793f0;
+  outline: 0px solid transparent;
+  box-shadow: 0 0 15px #0793f0;
+}
