--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,29 +1,164 @@
 <%- include('_head.ejs') %>
 
-<br/>
+  <br/>
 
-<div class="panel panel-info">
+  <div class="panel panel-info">
     <div class="panel-heading">
-        <h2 class="panel-title"><i class="fa fa-check-square"></i>&nbsp; Todo App</h2>
+      <h2 class="panel-title">
+        <i class="fa fa-check-square"></i>&nbsp; Cosmos DB - Todo</h2>
     </div>
     <div class="panel-body">
-        <table class="table table-striped table-hover todo">
-            <tr>
-                <th>ID</th>
-                <th>Complete</th>
-                <th>Title</th>
-                <th>Type</th>
-            </tr>
-            <% for(let i = 0; i < todoData.length; i++) { %>
-               <tr>
-                 <td><%= todoData[i].id %></td>
-                 <td><input type="checkbox" <%= todoData[i].checked ? "checked" : "" %> /></td>
-                 <td><%= todoData[i].title %></td>
-                 <td><%= todoData[i].type %></td>
-                </tr>
-            <% } %>
-        </table>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</button>
+        <a href="/todo/init" class="btn btn-primary"><i class="fa fa-exclamation-triangle"></i> REINIT</a>
+        <hr/>
+      <table class="table table-striped table-hover todo" id="todo-table">
+        <tr>
+          <!--th>ID</th-->
+          <th>Done</th>
+          <th>Title</th>
+          <th>Type</th>
+          <th>&nbsp;</th>
+        </tr>
+      </table>
     </div>
-</div>
+  </div>
 
+  <!-- new todo dialog -->
+  <div id="newModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">New Todo</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="newTitle">Todo message:</label>
+            <input type="text" class="form-control" id="newTitle">
+          </div>
+          <div class="form-group">
+            <label for="newType">Todo type:</label>
+            <select class="form-control" id="newType">
+              <option>Reminder</option>
+              <option>Todo</option>
+              <option>Meeting</option>
+              <option>Idea</option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal" onClick="addNewTodo()">Add Todo</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- ##################################################################################### -->
+
+  <script>
+    var todos;
+
+    function loadTodo() {
+      $.get(`/api/todo`, res => {
+        todos = res;
+
+        res.forEach(todo => {
+          addTodoToTable(todo);
+        });
+      });    
+    }
+
+    function clickTodo(id) {
+      let todo = todos.find(t => {return t.id == id});
+      todo.done = !todo.done;
+      updateTodo(todo, success => {
+        $(`#check_${todo.id}`)
+        .removeClass()
+        .addClass(`todocheck fa `+(todo.done ? 'fa-check-square-o' : 'fa-square-o'));
+      });
+    }
+
+    function clearForm()
+    {
+      $('#newTitle').val('');
+    }
+
+    function addNewTodo()
+    {
+      console.log($('#newTitle').val())
+      console.log($('#newType').val())
+      let todo = {
+        id: makeId(6),
+        title: $('#newTitle').val(),
+        done: false,
+        type: $('#newType').val()
+      }
+
+      updateTodo(todo, f => {addTodoToTable(todo); todos.push(todo)});
+    }
+
+    function addTodoToTable(todo) {
+      $('#todo-table tr:last').after(`<tr id="${todo.id}">
+        <td><i id="check_${todo.id}" class="todo-check fa ${todo.done ? 'fa-check-square-o' : 'fa-square-o'}" onclick="clickTodo('${todo.id}')"></i></td>
+        <td><div contentEditable="true" onkeydown="keyFilter(event)" class="todo-title" onfocusout="editTodo('${todo.id}', this)">${todo.title}</div></td>
+        <td>${todo.type}</td>
+        <td><button class="btn btn-danger" onClick="deleteTodo('${todo.id}')"><i class="fa fa-trash"></i></button></td>        
+      </tr>`);
+    }
+
+    function deleteTodoFromTable(id) {
+      $(`#${id}`).remove();
+    }
+
+    function editTodo(id, e) {
+      let todo = todos.find(t => {return t.id == id});
+      todo.title = e.innerHTML;
+      updateTodo(todo, success => {})
+    }
+    
+    function deleteTodo(id, e) {
+      $.ajax({
+        url: `/api/todo/${id}`,
+        type: 'DELETE',
+        success: f => { deleteTodoFromTable(id) }
+      })
+    }
+
+    // This fixes the behavior of contentEditable with newlines creating divs
+    function keyFilter(e) {
+      if (e.keyCode === 13) {
+        document.execCommand('insertHTML', false, '<br/><br/>');
+        e.preventDefault(); // doesn't work without this
+        return false;
+      }
+    }
+
+    function updateTodo(todo, callback) {
+      $.ajax({
+        url: `/api/todo`,
+        type: 'POST',
+        data: JSON.stringify(todo),
+        contentType: 'application/json',
+        success: callback
+      });
+    }
+
+    function makeId(len) {
+      var text = "";
+      var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+
+      for (var i = 0; i < len; i++)
+        text += possible.charAt(Math.floor(Math.random() * possible.length));
+
+      return text;
+    }
+
+
+    // Start here!
+    loadTodo();
+  </script>
+  
 <%- include('_foot.ejs') %>
