--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,9 +5,9 @@
   <div class="panel panel-info">
     <div class="panel-heading clearfix">
         <div class="btn-group pull-right">
-          <button class="btn btn-primary" style='font-size:150%' data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</button>
+          <button class="btn btn-primary todo-button" data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</button>
         </div>
-      <h2 class="panel-title" style="margin-top:10px;"><i class="fa fa-list-ul"></i>&nbsp; Cosmos DB - Todo</h2>
+      <h2 class="panel-title todo-panel-title"><i class="fa fa-list-ul"></i>&nbsp; Cosmos DB - Todo</h2>
     </div>
     <div class="panel-body">
 
