--- a/views/info.ejs
+++ b/views/info.ejs
@@ -8,21 +8,24 @@
   </div>
   <div class="panel-body">
 
-    <table class="table table-striped" style='font-size:1.4em'>
+    <table class="table table-striped" >
+      
       <tr> <td><i class="fa fa-cube"></i></td><td>  Containerized</td>
       <%if (isDocker) { %>
-         <td>Looks like we're running in a Docker container! &#x1F604; </td>
+        <td>Looks like we're running in a Docker container! &#x1F604; </td>
       <% } else { %>
         <td>Not running as a Docker container &#x1F622; </td>
       <% } %>        
       </tr>
+
       <tr> <td>&nbsp;<i class="fa fa-lightbulb-o"></i></td><td>  App Insights</td>
         <%if (process.env.APPINSIGHTS_INSTRUMENTATIONKEY) { %>
-           <td>Reporting data to App Insights, nice job! </td>
+          <td>Reporting data to App Insights, nice job! </td>
         <% } else { %>
-          <td>Not reporting data to App Insights &nbsp; <a target='_new' href='https://docs.microsoft.com/en-us/azure/application-insights/app-insights-nodejs'><i class="fa fa-external-link" style="font-size:1em !important"></i></a></td>
+          <td>Not reporting data to App Insights</td>
         <% } %>        
-        </tr>      
+      </tr>  
+
       <tr> <td><i class="fa fa-home"></i></td><td> Hostname</td> <td><%= info.hostname %></td> </tr>
       <tr> <td><i class="fa fa-laptop"></i></td><td>  OS Type</td> <td><%= info.type %></td> </tr>
       <tr> <td><i class="fa fa-gears"></i></td><td>  OS Version</td> <td><%= info.release %></td> </tr>
@@ -30,8 +33,19 @@
       <tr> <td><i class="fa fa-microchip"></i></td><td>  Processors</td> <td><%= info.cpus.length%> &times; <%=info.cpus[0].model %></td> </tr>
       <tr> <td><i class="fa fa-cog"></i></td><td>  Memory</td> <td><%= info.mem %> MB</td> </tr>
       <tr> <td><i class="fa fa-codepen"></i></td><td>  Node Version</td> <td><%= info.nodever %></td> </tr>
+      <tr> <td><i class="fa fa-code-fork"></i></td><td>  App Version</td> <td>v<%= info.appver %></td> </tr>
     </table>
 
+    <hr/>
+
+    <h3><i class="fa fa-sitemap"></i> &nbsp; Server Environmental Variables</h3>
+    <div class="envtable">
+      <table class="table table-hover" >    
+        <% Object.keys(process.env).forEach(p => { %>
+          <tr> <td><b> <%= p %> </b></td> <td class="envvars"><%= process.env[p] %></td> </tr>
+        <% }) %>
+      </table>
+    </div>
   </div>
 </div>
 
