Fixed problem with Todo JS path and renamed Cosmos connection string

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -61,7 +61,7 @@
 
   <!-- ##################################################################################### -->
 
-  <script src="js/todo-client.js"></script>
+  <script src="/js/todo-client.js"></script>
 
   <script>
     loadAllTodos();
