--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -36,7 +36,7 @@
           <a class="btn btn-success navbar-btn" href='/info'><i class="fa fa-info-circle"></i>&nbsp; INFO</a>
           <a class="btn btn-success navbar-btn" href='/weather'><i class="fa fa-cloud"></i>&nbsp; WEATHER</a>          
           <a class="btn btn-success navbar-btn" href='/load'><i class="fa fa-fire"></i>&nbsp; CPU LOAD</a>  
-          <%if (process.env.COSMOS_CONNSTR) { %><a class="btn btn-success navbar-btn" href='/todo'><i class="fa fa-check-square-o"></i>&nbsp; TODO</a><% } %>
+          <%if (process.env.DOCDBCONNSTR_TODO) { %><a class="btn btn-success navbar-btn" href='/todo'><i class="fa fa-check-square-o"></i>&nbsp; TODO</a><% } %>
           
           <div class="nav navbar-nav navbar-right">
             <%if (user) { %><span class="btn btn-disabled navbar-btn"><i class="fa fa-user-circle username"></i>&nbsp; <%= user %></span><% } %>
