--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <h2 class="bg-primary index-head"><img src='/images/node-icon.svg' height='90px'/> Node.js Demo App</h2>
     <hr/>
     <p>
+        <h1>HELLO RICOH!</h1>
         This is a simple Node.js Express web application designed for running in Azure &amp; containers for demos.<br/><br/>
         Get the <a href='https://github.com/benc-uk/nodejs-demoapp'>source on GitHub</a> and a <a href='https://github.com/benc-uk/nodejs-demoapp'>Docker image</a> is also available on Dockerhub
     </p>
