--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -7,7 +7,7 @@
         <div class="btn-group pull-right">
           <button class="btn btn-primary todo-button" data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</button>
         </div>
-      <h2 class="panel-title todo-panel-title"><i class="fa fa-list-ul"></i>&nbsp; Cosmos DB - Todo</h2>
+      <h2 class="panel-title todo-panel-title"><i class="fas fa-clipboard-check"></i>&nbsp; MongoDB - Todo</h2>
     </div>
     <div class="panel-body">
 
@@ -23,8 +23,6 @@
       </table>
     </div>
   </div>
-  
-  <a href="/todo/init">Reinit database</a>
 
   <!-- new todo dialog -->
   <div id="newModal" class="modal fade" role="dialog">
