--- a/views/_foot.ejs
+++ b/views/_foot.ejs
@@ -3,6 +3,6 @@
 <div class="footnote">[v3.5.1 - Ben Coleman, 2018]</div>
 </body>
 
-<!-- Area for invisible CI/CD trigger changes, 03-09-2018 12:51 -->
+<!-- Area for invisible CI/CD trigger changes, 09-10-2018 12:51 Hello QB -->
 
 </html>
