--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -11,13 +11,8 @@
       <tr>
         <td> <canvas id="weather_icon" width="256" height="256"></canvas> </td>
         <td class="weather-info">
-          <ul>
-            <li>Your IP Address is: &nbsp; <%= ip %></li>
-            <li>Your are in: &nbsp; <%= city %> in <%= country %></li>
-            <li>The weather is: &nbsp; <%= summary %></li>
-            <li>The temperature is: &nbsp; <%= temp %>°C</li>
-            <li>Chance of rain is: &nbsp; <%= precip %>%</li>
-            <li>Wind speed is: &nbsp; <%= wind %>mph</li>
+          <ul id="weather-list">
+
           </ul>
         </td>
       </tr>
@@ -31,10 +26,28 @@
 
 <script src='/js/skycons.js'></script>
 <script>
-  var skycons = new Skycons({ "color": "#eeeeee" });
-  skycons.add("weather_icon", "<%=icon%>");
-  skycons.play();
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(getWeather);
+  } else {
+    console.err("Geolocation is not supported by this browser.");
+  }
 
+  function getWeather(pos) {
+    $.get(`/api/weather/${pos.coords.latitude}/${pos.coords.longitude}`, weather => {
+      var skycons = new Skycons({ "color": "#3498db" });
+      skycons.add("weather_icon", weather.icon);
+      skycons.play();
+
+      $('#weather-list').append(`<li>The weather currently is: &nbsp; ${weather.summary}</li>`)
+      $('#weather-list').append(`<li>The temperature is: &nbsp; ${weather.temp}°C</li>`)
+      $('#weather-list').append(`<li>Chance of rain is: &nbsp; ${weather.precip}%</li>`)
+      $('#weather-list').append(`<li>Wind speed is: &nbsp; ${weather.wind}mph</li>`)
+      $('#weather-list').append(`<li>UV index is: &nbsp; ${weather.uv}</li>`)
+      $('#weather-list').append(`<hr/>`)
+      $('#weather-list').append(`<li>Forecast today: &nbsp; ${weather.forecastShort}</li>`)
+      $('#weather-list').append(`<li>Forecast week: &nbsp; ${weather.forecastLong}</li>`)
+    });
+  }
 </script>
 
 <%- include('_foot.ejs') %>
