--- a/views/_foot.ejs
+++ b/views/_foot.ejs
@@ -1,6 +1,6 @@
+  </div> <!-- closes the div container body-content -->
 
-</div>
-<div class="footnote">[v3.6.3 - Ben Coleman, 2018]</div>
+  <div class="footnote">[v<%= version %> - Ben Coleman, 2019]</div>
 </body>
 
 <!-- Area for invisible CI/CD trigger changes -->
