--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,18 @@
 <%- include('_head.ejs') %>
 
-<br/>
 <div class="jumbotron">
     <h2 class="bg-primary index-head"><img src='/images/node-icon.svg' height='90px'/> Node.js Demo App</h2>
     <hr/>
-    <p>
-        This is a simple Node.js Express web application designed for running in Azure &amp; containers for demos.<br/><br/>
+    <p class="lead">
+        This is a simple Node.js Express web application designed for running in Azure &amp; containers for demos.<br/>
         Get the <a href='https://github.com/benc-uk/nodejs-demoapp'>source on GitHub</a> and a <a href='https://github.com/benc-uk/nodejs-demoapp'>Docker image</a> is also available on Dockerhub
     </p>
+    <br/>
     <p>
         <img src='/images/get-started.svg' height='48px' /> &nbsp; 
-        <a target='_new' href='https://docs.microsoft.com/en-us/nodejs/azure/?view=azure-node-2.0.0' class="btn btn-primary btn-lg">Get started with Azure &amp; Node.js</a>
+        <a target='_new' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest' class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
     </p>
-    <br/>
+    <br/><br/><br/>
     <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
 </div>
 
