--- a/views/load.ejs
+++ b/views/load.ejs
@@ -1,12 +1,8 @@
 <%- include('_head.ejs') %>
 
-<br/>
-
-<div class="panel panel-info">
-    <div class="panel-heading">
-        <h2 class="panel-title"><i class="fa fa-fire"></i>&nbsp; CPU Load Generator</h2>
-    </div>
-    <div class="panel-body">
+<div class="card text-white bg-secondary">
+    <div class="card-header bg-info h3"><i class="fa fa-fire"></i>&nbsp; CPU Load Generator</div>
+    <div class="card-body">
         <h3>I did some really hard sums and it only took me <%= time %> milliseconds!</h3>
     </div>
 </div>
