--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,68 +1,62 @@
 <%- include('_head.ejs') %>
 
-  <br/>
-
-  <div class="panel panel-info">
-    <div class="panel-heading clearfix">
-        <div class="btn-group pull-right">
-          <button class="btn btn-primary todo-button" data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</button>
-        </div>
-      <h2 class="panel-title todo-panel-title"><i class="fas fa-clipboard-check"></i>&nbsp; MongoDB - Todo</h2>
-    </div>
-    <div class="panel-body">
-
-      <hr/>
-      <table class="table table-striped table-hover todo" id="todo-table">
-        <tr>
-          <!--th>ID</th-->
-          <th>Done</th>
-          <th>Title</th>
-          <th>Type</th>
-          <th>&nbsp;</th>
-        </tr>
-      </table>
-    </div>
+<div class="card text-white bg-secondary">
+  <div class="card-header h3 bg-info">   
+    <i class="fas fa-clipboard-check"></i>&nbsp; MongoDB - Todo
   </div>
+  <div class="card-body">
+    <a class="btn btn-md btn-success btn-lg" data-toggle="modal" data-target="#newModal" onClick="clearForm()"><i class="fa fa-edit"></i> NEW</a>
+    <hr/>
+    <table class="table table-striped table-hover todo" id="todo-table">
+      <tr>
+        <th>Done</th>
+        <th>Title</th>
+        <th>Type</th>
+        <th>&nbsp;</th>
+      </tr>
+    </table>
+  </div>
+</div>
 
-  <!-- new todo dialog -->
-  <div id="newModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">New Todo</h4>
+<!-- new todo dialog -->
+<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content bg-primary text-white">
+      <div class="modal-header bg-info">
+        <h5 class="modal-title" id="exampleModalLabel">Create Todo Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="newTitle">Todo message:</label>
+          <textarea type="text" class="form-control" id="newTitle"></textarea>
         </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="newTitle">Todo message:</label>
-            <textarea type="text" class="form-control" id="newTitle"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="newType">Todo type:</label>
-            <select class="form-control" id="newType">
-              <option>Reminder</option>
-              <option>Todo</option>
-              <option>Meeting</option>
-              <option>Idea</option>
-            </select>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-dismiss="modal" onClick="addNewTodo()">Add Todo</button>
+        <div class="form-group">
+          <label for="newType">Todo type:</label>
+          <select class="form-control" id="newType">
+            <option>Reminder</option>
+            <option>Todo</option>
+            <option>Meeting</option>
+            <option>Idea</option>
+          </select>
         </div>
       </div>
-
+      <div class="modal-footer bg-primary">
+        <button type="button" class="btn btn-success" data-dismiss="modal" onClick="addNewTodo()">Add Todo</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      </div>
     </div>
   </div>
+</div>
 
-  <!-- ##################################################################################### -->
+<!-- ##################################################################################### -->
 
-  <script src="/js/todo-client.js"></script>
+<script src="/js/todo-client.js"></script>
 
-  <script>
-    loadAllTodos();
-  </script>
-  
+<script>
+  loadAllTodos();
+</script>
+
 <%- include('_foot.ejs') %>
