--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,29 @@
     <h2 class="bg-primary index-head"><img src='/images/node-icon.svg' height='90px'/> Node.js Demo App</h2>
     <hr/>
     <p class="lead">
-        This is a simple Node.js Express web application designed for running in Azure &amp; containers for demos.<br/>
-        Get the <a href='https://github.com/benc-uk/nodejs-demoapp'>source on GitHub</a> and a <a href='https://github.com/benc-uk/nodejs-demoapp'>Docker image</a> is also available on Dockerhub
+        This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud demos & containers in mind, to demonstrate capabilities such as auto scaling in Azure and Application Insights monitoring.<br/>
+
+        <!-- Get the <a href='https://github.com/benc-uk/nodejs-demoapp'>source on GitHub</a> and a <a href='https://github.com/benc-uk/nodejs-demoapp'>Docker image</a> is also available on Dockerhub -->
     </p>
     <br/>
+
     <p>
-        <img src='/images/get-started.svg' height='48px' /> &nbsp; 
-        <a target='_new' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest' class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
+        <img src='/images/octocat.png' width='58px' /> &nbsp; 
+        <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project Source on Github</a>
+    </p>  
+    <p>
+        <img src='/images/docker.png' width='58px' /> &nbsp; 
+        <a target='_blank' href='https://hub.docker.com/r/bencuk/nodejs-demoapp' class="btn btn-info btn-lg">Docker images on Dockerhub</a>
+    </p>  
+
+    <hr style="background-color: #777"/>
+
+    <p>
+        <img src='/images/get-started.svg' width='58px' /> &nbsp; 
+        <a target='_blank' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest' class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
     </p>
-    <br/><br/><br/>
+     
+    <br/>
     <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
 </div>
 
