Why did my CI not run?

--- a/views/_foot.ejs
+++ b/views/_foot.ejs
@@ -3,6 +3,6 @@
   <div class="footnote">[v<%= version %> - Ben Coleman, 2019]</div>
 </body>
 
-<!-- Area for invisible CI/CD trigger changes -->
+<!-- Area for invisible CI/CD trigger changes and stuff -->
 
 </html>
