URL path tweaks

--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" href="/">
-        <img src="/images/node-icon.png" width="37" height="40" class="d-inline-block align-top" alt="">
+        <img src="images/node-icon.png" width="37" height="40" class="d-inline-block align-top" alt="">
         &nbsp; Node.js Demo
       </a>
 
