--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -15,10 +15,10 @@
 </div>
 
 <div>
-<img src="/images/darksky.png" height="64px"/>
+<img src="images/darksky.png" height="64px"/>
 </div>
 
-<script src='/js/skycons.js'></script>
+<script src='js/skycons.js'></script>
 <script>
   if (navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(getWeather);
