--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -53,7 +53,7 @@
 
 <!-- ##################################################################################### -->
 
-<script src="/js/todo-client.js"></script>
+<script src="js/todo-client.js"></script>
 
 <script>
   loadAllTodos();
