--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,37 @@
 <%- include('_head.ejs') %>
 
 <div class="jumbotron">
-    <h2 class="bg-primary index-head"><img src='images/node-icon.svg' height='90px'/> Node.js Demo App</h2>
-    <hr/>
-    <p class="lead">
-        This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud demos & containers in mind, to demonstrate capabilities such as auto scaling in Azure and Application Insights monitoring.<br/>
+  <h2 class="bg-primary index-head"><img src='images/node-icon.svg' height='90px' /> Node.js Demo App</h2>
+  <hr />
+  <p class="lead">
+    This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud
+    demos & containers in mind, to demonstrate capabilities such as auto scaling in Azure and Application Insights
+    monitoring.<br />
+  </p>
+  <br />
 
-        <!-- Get the <a href='https://github.com/benc-uk/nodejs-demoapp'>source on GitHub</a> and a <a href='https://github.com/benc-uk/nodejs-demoapp'>Docker image</a> is also available on Dockerhub -->
-    </p>
-    <br/>
+  <p>
+    <img src='images/octocat.png' width='58px' /> &nbsp;
+    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project Source on
+      Github</a>
+  </p>
+  <p>
+    <img src='images/docker.png' width='58px' /> &nbsp;
+    <a target='_blank' href='https://hub.docker.com/r/bencuk/nodejs-demoapp' class="btn btn-info btn-lg">Docker images
+      on Dockerhub</a>
+  </p>
 
-    <p>
-        <img src='images/octocat.png' width='58px' /> &nbsp; 
-        <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project Source on Github</a>
-    </p>  
-    <p>
-        <img src='images/docker.png' width='58px' /> &nbsp; 
-        <a target='_blank' href='https://hub.docker.com/r/bencuk/nodejs-demoapp' class="btn btn-info btn-lg">Docker images on Dockerhub</a>
-    </p>  
+  <hr style="background-color: #777" />
 
-    <hr style="background-color: #777"/>
+  <p>
+    <img src='images/get-started.svg' width='58px' /> &nbsp;
+    <a target='_blank' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest'
+      class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
+  </p>
 
-    <p>
-        <img src='images/get-started.svg' width='58px' /> &nbsp; 
-        <a target='_blank' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest' class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
-    </p>
-     
-    <br/>
-    <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
+
+  <br />
+  <p>Microsoft <i class="fa fa-heart"></i> Open Source</p>
 </div>
 
 <%- include('_foot.ejs') %>
